# reachy-mini-simulator

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  sensor_and_power_research.md
docs/: ARCHITECTURE.md  PROGRESS.md  SDK_API_DIFF.md
hardware/: BOM.md  chassis.scad  export_stl.sh
hardware/stl/: base_q1.stl  base_q2.stl  base_q3.stl  base_q4.stl  center_bracket.stl  joint_bracket.stl  layer2_q1.stl  layer2_q2.stl  layer2_q3.stl  layer2_q4.stl  lidar_mount.stl  motor_mount.stl
reachy_mini_simulator/: __init__.py  ai_brain.py  audio_input.py  calendar_mock.py  chassis_controller.py  expression.py  factory.py  interpolation.py  main.py  mock_media.py  mock_robot.py  motion.py  navigation.py  obstacle_detector.py  office_map.py  person_detector.py  proactive.py  real_robot.py  robot_interface.py  scenario.py  tts_engine.py  utils.py  visualizer.py  web_server.py
reachy_mini_simulator/maps/: default_office.json
reachy_mini_simulator/scenarios/: office_day.json
reachy_mini_simulator/web/: index.html
tests/: test_ai_brain_inject.py  test_gaze.py  test_imu.py  test_integration.py  test_interpolation.py  test_media_extended.py  test_mock_robot.py  test_motion.py  test_navigation.py  test_office_map.py  test_person_detector.py  test_proactive.py  test_robot_interface.py  test_scenario.py  test_tts_real.py  test_wake_sleep_motor.py  test_web_api_perception.py  test_web_voice.py
